Changes in Second Rehaul

--- a/gpt_index.html
+++ b/gpt_index.html
@@ -40,9 +40,16 @@
     <section id="about" class="about-container">
       <!-- Left Side: Blurb -->
       <div class="about-text">
-        <h2>About Me</h2>
-        <p>Hey, I'm Kennedy! I'm a passionate data scientist, pursuing analyst and ML roles.
-          I enjoy solving complex problems and learning a little more every day.</p>
+        <h2>Hi, I am <br>
+          <b class="about-name">Kennedy Wiles</b></h2>
+        <h1>Aspiring Data Scientist and Analyst</h1>
+        <ul class="about-socials">
+          <li><a href="#medium">Medium</a></li>
+          <li><a href="https://github.com/KenneDW" target="_blank" rel="noopenernoreferrer">
+            <img src="images/github-mark.svg" alt="GitHub"></a></li>
+          <li><a href="https://www.linkedin.com/in/kennedy-wiles-0b9015295/" target="_blank" rel="noopener noreferrer">
+            <img src="images/In-White-14.png" alt="LinkedIn"></a></li>
+        </ul>
       </div>
 
       <!-- Right Side: Image -->
